--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lodash": "~2.4.1",
     "mkdirp": "~0.5.0",
     "svg2ttf": "~1.1.2",
-    "svgicons2svgfont": "=0.1.1",
+    "svgicons2svgfont": "git://github.com/mstorus/svgicons2svgfont#o2",
     "temp": "~0.8.0",
     "ttf2eot": "~1.3.0",
     "ttf2woff": "~1.3.0",
