--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "glob": "~4.0.5",
     "lodash": "~2.4.1",
     "mkdirp": "~0.5.0",
-    "svg2ttf": "~1.1.2",
+    "svg2ttf": "git://github.com/mstorus/svg2ttf#o2",
     "svgicons2svgfont": "git://github.com/mstorus/svgicons2svgfont#o2",
     "temp": "~0.8.0",
     "ttf2eot": "~1.3.0",
